--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.multiplayer.playmode": "1.6.1",
     "com.unity.netcode.gameobjects": "2.5.0",
+    "com.unity.recorder": "5.1.3",
     "com.unity.render-pipelines.universal": "17.2.0",
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.9",
