--- a/.github/workflows/pr-ai-summary.yml
+++ b/.github/workflows/pr-ai-summary.yml
@@ -13,6 +13,15 @@ jobs:
       pull-requests: write
 
     steps:
+      - name: Debug Info
+        run: |
+          echo "🔍 Workflow: ${{ github.workflow }}"
+          echo "📁 Workflow File: ${{ github.workflow_ref }}"
+          echo "🎯 Event: ${{ github.event_name }}"
+          echo "🔧 Action: ${{ github.event.action }}"
+          echo "📋 PR Number: #${{ github.event.pull_request.number }}"
+          echo "✏️ PR Title: ${{ github.event.pull_request.title }}"
+          
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
